# woder

./: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml
src/woder/adapters/: clock.py  exercise_repository.py
src/woder/domain/: result.py
src/woder/domain/entities/: exercise.py
src/woder/domain/ports/: clock.py
src/woder/domain/ports/repositories/: exercise.py
src/woder/domain/usecases/: compute_1rm.py  log_exercise.py
tests/domain/: test_result.py
tests/domain/adapters/: test_clock.py
tests/domain/usecases/: conftest.py  test_compute_1rm_usecase.py
tests/domain/usecases/exercises/: test_log_exercise.py
